[B]2013-08-17[/B] Version [B]0.9.10[/B]
. Updated to 40f9af5 @ 2013-08-13

[B]2013-02-16[/B] Version [B]0.9.9[/B]
. Initial release: DeSmuME v0.9.9, https://github.com/libretro/desmume-libretro @ 088bd18 (2012-11-23)