@@ -1,3 +1,6 @@
+[B]2015-05-07[/B] Version [B]0.9.10[/B]
+. Changed to DeSmuME SVN, https://github.com/libretro/desmume @ d1f0de5 (2015-03-18)
+
 [B]2013-08-17[/B] Version [B]0.9.10[/B]
 . Updated to 40f9af5 @ 2013-08-13
 
